--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -20,5 +20,8 @@
         Media image file<br />
         <img src="{{MEDIA_URL}}cat.jpg" alt="Scottish Fold" />
     </div>
+    <div>
+        <a href="/rango/">Return to main page</a> <br />
+    </div>
 </body>
 </html>
