--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -12,6 +12,9 @@
 
     <div>
         {% if categories %}
+        <h2>
+                Most Liked Categories
+        </h2>
         <ul>
             {% for category in categories %}
             <li>
@@ -25,6 +28,25 @@
             </strong>
         {% endif %}
     </div>
+<div>
+        {% if pageviews %}
+        <h2>
+                Most viewed Pages
+        </h2>
+        <ul>
+            {% for page in pageviews %}
+            <li>
+                <a href="{{ page.url }}">{{ page.title }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <strong>
+                There are no pages present.
+            </strong>
+        {% endif %}
+    </div>
+
     <div>
         <a href="/rango/about/">About Rango</a> <br />
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
