--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -16,7 +16,7 @@
                 </ul>
             {% else %}
                 <strong>
-                    No pages currently in category
+                    No pages currently in category.
                 </strong>
             {% endif %}
         {% else %}
