--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div>
+        <h1>Rango says here is the about page</h1> <br />
         <strong>This tutorial has been put together by {{yourname}}.</strong><br />
     </div>
 
@@ -20,6 +21,7 @@
         Media image file<br />
         <img src="{{MEDIA_URL}}cat.jpg" alt="Scottish Fold" />
     </div>
+
     <div>
         <a href="/rango/">Return to main page</a> <br />
     </div>
