--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -18,7 +18,8 @@
         <ul>
             {% for category in categories %}
             <li>
-                <a href="/rango/category/{{ category.slug }}">{{ category.name }} </a>
+                <!--<a href="{#% url 'show_category' category.slug %#}">{{ category.name }}</a>-->
+                 <a href="/rango/category/{{ category.slug }}">{{ category.name }} </a> 
             </li>
             {% endfor %}
         </ul>
@@ -46,9 +47,12 @@
             </strong>
         {% endif %}
     </div>
-
     <div>
-        <a href="/rango/about/">About Rango</a> <br />
+        <a href="/rango/add_category/">Add a New Category</a> <br />
+    </div>
+    <div>
+        <!-- <a href="/rango/about/">About Rango</a> <br /> -->
+        <a href="{% url 'rango:about' %}"> About Rango</a> <br /> 
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
     </div>
 </body>
