--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
 {% load staticfiles %}
 
-<html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
+{% block title_block %}
+    Index
+{% endblock %}
+
+{% block body_block %}
+
     <h1>Rango says...</h1>
     <div>hey there partner!</div>
 
@@ -18,8 +19,8 @@
         <ul>
             {% for category in categories %}
             <li>
-                <!--<a href="{#% url 'show_category' category.slug %#}">{{ category.name }}</a>-->
-                 <a href="/rango/category/{{ category.slug }}">{{ category.name }} </a> 
+                <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
+                <!-- <a href="/rango/category/{{ category.slug }}">{{ category.name }} </a> -->
             </li>
             {% endfor %}
         </ul>
@@ -48,12 +49,10 @@
         {% endif %}
     </div>
     <div>
-        <a href="/rango/add_category/">Add a New Category</a> <br />
-    </div>
-    <div>
-        <!-- <a href="/rango/about/">About Rango</a> <br /> -->
-        <a href="{% url 'rango:about' %}"> About Rango</a> <br /> 
+    <!--<a href="/rango/add_category/">Add a New Category</a> <br />
+        <a href="/rango/about/">About Rango</a> <br /> 
+        <a href="{% url 'rango:about' %}"> About Rango</a> <br /> -->
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-    </div>
-</body>
-</html>
+    </div> 
+
+{% endblock %}
