--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -3,14 +3,14 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    About
+    {{ category.name }} About
 {% endblock %}
 
 {% block body_block %}
     <div>
         <h1>Rango says here is the about page</h1> <br />
         <strong>This tutorial has been put together by {{yourname}}.</strong><br />
-    </div>	
+    </div>
 
     <div>
         Static image file<br />
@@ -20,8 +20,5 @@
     <div>
         Media image file<br />
         <img src="{{MEDIA_URL}}cat.jpg" alt="Scottish Fold" />
-    </div>
-    <div>
-        <a href="/rango/">Return to main page</a> <br />
     </div>
 {% endblock %}
