--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -3,29 +3,27 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Add page
+    {{ category.name }} Add page
 {% endblock %}
 
 {% block body_block %}
-
-    <% if category %}
+    {% if category %}
         <h1> {{category.name}} Add a Page </h1>
-        <div>
-            <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-                {% csrf_token %}
-                {% for hidden in form.hidden_fields %}
-                    {{hidden}}
-                {% endfor %}
-                {% for field in form.visible_fields %}
-                    {{fields.errors}}
-                    {{fields.help_text}}
-                    {{field}}
-                {% endfor %}
-                <input type="submit" name="submit" value="Create Page" />
-            </form>
-        </div>
+            <div>
+                <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+                    {% csrf_token %}
+                    {% for hidden in form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
+                    {% for field in form.visible_fields %}
+                        {{ fields.errors }}
+                        {{ fields.help_text }}
+                        {{ field }}
+                    {% endfor %}
+                    <input type="submit" name="submit" value="Create Page" />
+                </form>
+            </div>
     {% else %}
         A category by this name does no exist.
-    {% endfor %}
-
+    {% endif %}
 {% endblock %}
