--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
-
-{% load staticfiles %}
 {% load rango_template_tags %}
+{% load staticfiles %}
 
 <html>
-    <head lang="en">
-        <meta charset="UTF-8" />
+    <head>
         <title>
             Rango -
             {% block title_block %}
                 How to Tango with Django!
-            {% endblock %}    
+            {% endblock %}
         </title>
     </head>
     <body>
         <div>
-            {% block sidebar_block %}
-                {% get_category_list %}
+            {% block body_block %}
             {% endblock %}
         </div>
-
         <div>
-            {% block body_block %}
+            {% block sidebar_block %}
+                {% get_category_list category %}
             {% endblock %}
         </div>
         <hr />
         <div>
             <ul>
-                <li><a href="{% url 'add_category' %}">Add New Category</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'index' %}">Index</a></li>
+                <li><a href="{% url 'rango:add_category' %}">Add New Category</a></li>
+                <li><a href="{% url 'rango:about' %}">About</a></li>
+                <li><a href="{% url 'rango:index' %}">Index</a></li>
             </ul>
         </div>
     </body>
