--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,4 +1,5 @@
 {% extends 'rango/base.html' %}
+
 {% load staticfiles %}
 
 {% block title_block %}
@@ -8,6 +9,7 @@
 {% block body_block %}
     {% if category %}
         <h1>{{ category.name }}</h1>
+
         {% if pages %}
             <ul>
                 {% for page in pages %}
@@ -15,11 +17,9 @@
                 {% endfor %}
             </ul>
         {% else %}
-            <strong>
-                No pages currently in category.
-            </strong>
+            <strong> No pages currently in category. </strong>
         {% endif %}
-        <a href="{% url 'add_page' category.slug %}"> Add a Page</a>
+            <a href="{% url 'rango:add_page' category.slug %}"> Add a Page </a>
     {% else %}
         The specified category does not exist!
     {% endif %}
