--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,26 +1,22 @@
 {% extends 'rango/base.html' %}
-
 {% load staticfiles %}
 
 {% block title_block %}
-    Index
+    {{ category.name }} Add Category
 {% endblock %}
 
 {% block body_block %}
-
     <h1>Rango says...</h1>
     <div>hey there partner!</div>
 
     <div>
         {% if categories %}
-        <h2>
-                Most Liked Categories
-        </h2>
+        <h2> Most Liked Categories </h2>
         <ul>
             {% for category in categories %}
             <li>
-                <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
-                <!-- <a href="/rango/category/{{ category.slug }}">{{ category.name }} </a> -->
+                <!-- <a href="{#% url 'rango:show_category' category.slug %#}">{{ category.name }}</a> -->
+                <a href="/rango/category/{{ category.slug }}">{{ category.name }} </a>
             </li>
             {% endfor %}
         </ul>
@@ -49,10 +45,6 @@
         {% endif %}
     </div>
     <div>
-    <!--<a href="/rango/add_category/">Add a New Category</a> <br />
-        <a href="/rango/about/">About Rango</a> <br /> 
-        <a href="{% url 'rango:about' %}"> About Rango</a> <br /> -->
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-    </div> 
-
+    </div>
 {% endblock %}
