--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,6 +14,7 @@
             hey there partner!
         {% endif %}
     </div>
+    <p>visits: {{ visits }}</p>
     <div>
         {% if categories %}
         <h2> Most Liked Categories </h2>
