--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,7 +11,7 @@
         <h1>Rango says here is the about page</h1> <br />
         <strong>This tutorial has been put together by {{yourname}}.</strong><br />
     </div>
-
+    <p>visits: {{ visits }}</p>
     <div>
         Static image file<br />
         <img src="{% static 'images/rango_about.jpg' %}" alt="Picture of Rango" /><br />
